[refactor] fix overflow of keywords and titles
(cherry picked from commit e8989b54d485d80a36136b3cd390396622628c44)

--- a/app/components/com_publications/site/assets/css/browse.scss
+++ b/app/components/com_publications/site/assets/css/browse.scss
@@ -176,8 +176,10 @@ input#search[type="text"] {
     background-color: transparent;
     border: none;
     color: v.$color-text-body;
+    display: flex;
     font-style: v.$font-body;
     line-height: inherit;
+    text-align: left;
 
     &:hover {
         background-color: transparent;
@@ -186,7 +188,8 @@ input#search[type="text"] {
 }
 
 .hz-icon {
-    margin-left: auto;
+    align-self: center;
+    margin-left: .5em;
 }
 
 .facet-count {
@@ -251,6 +254,7 @@ input#search[type="text"] {
 
     h5 {
         margin-top: .4em;
+        word-break: break-word;
     }
 }
 
@@ -273,6 +277,7 @@ input#search[type="text"] {
     .author {
         font-size: .9rem;
         border-right: 1px solid v.$silver;
+        display: inline-block;
         padding: 0 .5em;
 
         &:first-of-type {
